# mem0ry-loader

./: .env.example  .gitignore  .pre-commit-config.yaml  .venv  APPROACH.md  CLAUDE.md  LICENSE  NEXTSTEPS.md  README.md  main.py  pyproject.toml  requirements.txt  sample_conversations.json
examples/: sample_conversations.json
src/: __init__.py
src/config/: settings.py
src/extractors/: ollama_extractor.py  openai_extractor.py
src/loaders/: local_mem0_loader.py  mem0_loader.py
src/parsers/: json_parser.py
src/processors/: memory_processor.py
tests/: __init__.py  conftest.py  test_json_parser.py  test_mem0_loader.py  test_memory_processor.py  test_ollama_extractor.py  test_openai_extractor.py
